--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html ng-app="azulFrotas">
   <meta content='text/html; charset=utf-8' http-equiv='content-type'>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0">
     <head>
       <title>Azul Frotas - ContaAzul company.</title>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
